<resources>
    <string name="app_name" translatable="false">Top Dark</string>
    <string name="btnBack">Back</string>
    <string name="btnOk" translatable="false">Ok</string>
    <string name="seleccionNave">Ship selection</string>
    <string name="pistaMatricula">Registration...</string>
    <string name="pasajeros">Passengers</string>
    <string name="carga">Load</string>
    <string name="imgPersonalizada">Custom image...</string>
    <string name="creada">Ship created</string>
    <string name="errorMatricula">Error, fill the registration</string>
    <string name="pistaNombre">Name...</string>
    <string name="pistaEdad">Age...</string>
    <string name="txtNovato">Rookie</string>
    <string name="txtIntermedio">Intermediate</string>
    <string name="txtExperto">Expert</string>
    <string name="addPiloto">Pilot Added</string>
    <string name="txtErrorRelleno">Error, fill all the fields</string>
    <string name="txtErrorIcorrecto">Error, data is incorrect</string>
    <string name="seleccionMision">Select mission</string>
    <string name="seleccionPiloto">Select pilot</string>
    <string name="confirmarSeleccion">Confirm selection</string>
    <string name="asignar">Assign</string>
    <string name="infoBombardeo">For bombing missions you have to select the targets to destroy.</string>
    <string name="txtObjetivos">Objectives:</string>
    <string name="txtPistaObjetivos">Objectives...</string>
    <string name="infoCombate">In combat missions, you have to specify the number of fighters you will face.</string>
    <string name="txtCazas">Fighters</string>
    <string name="txtPistaCazas">Number of Figthers</string>
    <string name="txtCrearVuelo">FLIGHT MISSION</string>
    <string name="txtCrearBombardeo">BOMBING MISSION</string>
    <string name="txtCrearCombate">COMBAT MISSION</string>
    <string name="txtVerPerfil">SEE PROFILE</string>
    <string name="txtCambiarFoto">CHANGE PHOTO</string>
    <string name="txtListadoMisiones">MISSIONS LIST</string>
    <string name="txtMisionesRealizadas">COMPLETED MISSIONS</string>
    <string name="txtConectar">CONNECT</string>
    <string name="txtUsuario">User...</string>
    <string name="txtPassword">Password...</string>
    <string name="txtNombre">Name:</string>
    <string name="txtEdad">Age:</string>
    <string name="txtExperiencia">Experience:</string>
    <string name="txtRango">Rank:</string>
    <string name="txtAltaPiloto">NEW PILOT</string>
    <string name="txtAltaNave">NEW SHIP</string>
    <string name="txtCrearMision">CREATE MISSION</string>
    <string name="tatAsignar">ASSIGN</string>
    <string name="txtRanking">RANKING</string>
    <string name="txtBienvenido">Welcome</string>
    <string name="txtNewPassword">Insert your new password:</string>
    <string name="txtPistaNuevaContraseña">New Password...</string>
    <string name="txtCambiarContraseña">CHANGE PASSWORD</string>
    <string name="txtContinuar">CONTINUE</string>
</resources>