<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dv2"
    tools:context=".ActivityVader">

    <Button
        android:id="@+id/btnVolver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#E91E63"
        android:text="@string/btnBack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.947" />

    <Button
        android:id="@+id/btnAltaNave"
        android:layout_width="212dp"
        android:layout_height="68dp"
        android:backgroundTint="#000000"
        android:text="@string/txtAltaNave"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.242"
        app:strokeColor="#FFFFFF"
        app:strokeWidth="5px" />

    <Button
        android:id="@+id/btnCrearMision"
        android:layout_width="212dp"
        android:layout_height="68dp"
        android:backgroundTint="#000000"
        android:text="@string/txtCrearMision"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38"
        app:strokeColor="#FFFFFF"
        app:strokeWidth="5px" />

    <Button
        android:id="@+id/btnAltaPiloto"
        android:layout_width="212dp"
        android:layout_height="68dp"
        android:backgroundTint="#000000"
        android:text="@string/txtAltaPiloto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.098"
        app:strokeColor="#FFFFFF"
        app:strokeWidth="5px" />

    <Button
        android:id="@+id/btnAsignar"
        android:layout_width="212dp"
        android:layout_height="68dp"
        android:backgroundTint="#000000"
        android:text="@string/asignar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.52"
        app:strokeColor="#FFFFFF"
        app:strokeWidth="5px" />

    <Button
        android:id="@+id/btnRanking"
        android:layout_width="212dp"
        android:layout_height="68dp"
        android:backgroundTint="#000000"
        android:text="@string/txtRanking"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.657"
        app:strokeColor="#FFFFFF"
        app:strokeWidth="5px" />

</androidx.constraintlayout.widget.ConstraintLayout>