<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="409dp"
            android:layout_height="93dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.513">

            <ImageView
                android:id="@+id/imgImagen2"
                android:layout_width="98dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:srcCompat="@tools:sample/avatars" />

            <LinearLayout
                android:layout_width="290dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txvNombre"
                        android:layout_width="76dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/txtNombre" />

                    <TextView
                        android:id="@+id/txtNombrePiloto2"
                        android:layout_width="230dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:textSize="24sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txvEdad"
                        android:layout_width="63dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_weight="1"
                        android:text="@string/txtEdad"
                        app:layout_constraintBottom_toBottomOf="parent" />

                    <TextView
                        android:id="@+id/txtEdad"
                        android:layout_width="52dp"
                        android:layout_height="33dp"
                        android:layout_weight="1"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txvExp"
                        android:layout_width="111dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_weight="1"
                        android:text="@string/txtExperiencia"
                        app:layout_constraintBottom_toBottomOf="parent" />

                    <TextView
                        android:id="@+id/txtExperiencia"
                        android:layout_width="65dp"
                        android:layout_height="30dp"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/txtRango"
                        android:layout_width="130dp"
                        android:layout_height="30dp"
                        android:layout_weight="1" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>